--- a/package.json
+++ b/package.json
@@ -9,20 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.9.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-beautiful-dnd": "11.0.2",
-    "react-dom": "^18",
-    "react-draggable": "^4.4.6",
-    "react-resizable": "^3.0.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
-    "@types/react-resizable": "^3.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
