--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "konva": "^9.3.15",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-konva": "^18.2.10",
+    "react-scripts": "2.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
