--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "konva": "^9.3.15",
+    "lucide-react": "^0.447.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-konva": "^18.2.10",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
